# PageSkim

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  action.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_change.yml
.github/rulesets/: protect-main.json  protect-release-tags.json
.github/workflows/: ci.yml
apps/playground/: README.md  next.config.ts  package.json  vercel.json
apps/playground/scripts/: embed-examples.mjs
apps/playground/src/app/: apple-icon.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/playground/src/components/: Icons.tsx  OutputTabs.tsx  TokenGauge.tsx  (+1 more)
bench/: .gitignore  PROTOCOL.md  README.md  pyproject.toml
bench/agentpage_bench/: __init__.py
bench/agentpage_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bench/data/: titles.txt
bench/pageskim_bench/: __init__.py  cache.py  conditions.py  judge.py  providers.py  qa.py  run.py  wikipedia.py
bench/pageskim_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bench/tests/: test_bench.py  test_smoke.py
docs/: LAUNCH.md  adapters.md  consuming.md  integration.md
examples/: README.md
examples/article-infobox/: page.html
examples/blog/: page.html
examples/docs/: page.html
examples/product/: page.html
skills/agentpage/: README.md
skills/pageskim/: README.md  SKILL.md
skills/pageskim/scripts/: generate-and-validate.sh
spec/: CHANGELOG.md  SPEC.md  pageskim.schema.json
(+14 files in other folders)
