[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpage-bench"
version = "0.0.0"
description = "Benchmark harness for the AgentPage format: accuracy and tokens-per-correct-answer across raw HTML, markdown, llms.txt-style, and AgentPage two-hop conditions."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["agentpage_bench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
